add l5 swagger cho bandcontroller
